NXP-308 add interface à requisição
